--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "Put the session-id here.",
+      "description": "𝙰𝚂𝙸𝚃𝙷𝙰-𝙼𝙳=lBZSXDyb#_ohN6QywBM6A1YE-XD-UaHvar_Yyiequqe1wQhLeDJ0",
       "required": true
     }
 },
